--- a/themes/pure-ejs/layouts/partials/articleList.html
+++ b/themes/pure-ejs/layouts/partials/articleList.html
@@ -9,21 +9,23 @@
         <%= page.title %>
       </a>
     </h3>
+    <% page.tags.forEach(function(tag) { %>
+      <span class="DateTagBar__Item DateTagBar__Tag DateTagBar__Tag--<%= tag.color %>">
+        <a href="tag/<%= tag.value %>.html"><%= tag.value %></a>
+      </span>
+    <% }) %>
+    <div class="DateTagBar">
+      <% if (page.date) { %>
+        <span class="DateTagBar__Item DateTagBar__Date">发布于 <%= page.dateString %></span>
+      <% } %>
+      
+    </div>
     <% if (page.descriptionHTML) { %>
       <p class="Article__Desc">
         <%- page.descriptionHTML %>
       </p>
     <% } %>
-    <div class="DateTagBar">
-      <% if (page.date) { %>
-        <span class="DateTagBar__Item DateTagBar__Date">Posted on <%= page.dateString %></span>
-      <% } %>
-      <% page.tags.forEach(function(tag) { %>
-        <span class="DateTagBar__Item DateTagBar__Tag DateTagBar__Tag--<%= tag.color %>">
-          <a href="tag/<%= tag.value %>.html"><%= tag.value %></a>
-        </span>
-      <% }) %>
-    </div>
+
   </article>
 <% }) %>
 </article>
